--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,11 @@ header li.mobile-menu-link:hover .mobile-sub-menu {
   transition: all 500ms ease-in-out;
 }
 
+.hero-section {
+  background: url(./assets/home-banner.png) center center / cover;
+  background-position: center center;
+}
+
 .promo-feature-card {
   box-shadow: 0px 0px 150px 0px rgba(78, 67, 250, 0.1);
   border-right: 1px solid #ededed;
